# agentrux-plugins

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: publish-npm.yml  publish-pypi.yml
agent-sdk/: README.md  pyproject.toml
agent-sdk/agentrux_agent_tools/: __init__.py  cli.py  client.py  executor.py  toolkit.py  tools.py
agent-sdk/tests/: test_client_auth.py  test_oauth_refresh.py  test_toolkit.py
dify/: README.en.md  README.md  dify-agentrux-tools-0.2.1.difypkg  dify-agentrux-tools-1.0.0.difypkg  dify-agentrux-tools-1.1.0.difypkg  dify-agentrux-tools-1.2.0.difypkg  dify-agentrux-tools-1.3.0.difypkg  dify-agentrux-tools-1.4.0.difypkg  dify-agentrux-tools-1.4.1.difypkg  dify-agentrux-tools-1.4.2.difypkg  dify-agentrux-tools-1.4.3.difypkg  dify-agentrux-tools-1.4.4.difypkg  dify-agentrux-trigger-0.4.0.difypkg  dify-agentrux-trigger-1.0.10.difypkg  dify-agentrux-trigger-1.0.8.difypkg  dify-agentrux-trigger-1.0.9.difypkg
dify/examples/: topic2_to_topic3_pipeline.yml  verify_dify_loopback.py
dify/scripts/: agentrux-dify-cleanup.sh
dify/src-1.0.0/: manifest.yaml  requirements.txt
dify/src-1.0.0/provider/: agentrux_api.py  agentrux_tools.py  agentrux_tools.yaml
dify/src-1.0.0/tools/: publish.py  publish.yaml  read.py  upload.py  upload.yaml
dify/src-1.1.0/: manifest.yaml  requirements.txt
dify/src-1.1.0/provider/: agentrux_api.py  agentrux_tools.py  agentrux_tools.yaml
dify/src-1.1.0/tools/: get_topics.py  get_topics.yaml  publish.py  publish.yaml  read.py  read.yaml  upload.py  upload.yaml
dify/src-trigger/: manifest.yaml
dify/src-trigger-1.0.8/: main.py  manifest.yaml  requirements.txt
dify/src-trigger-1.0.8/provider/: agentrux_api.py
dify/src-trigger/provider/: agentrux_api.py
dify/src-trigger/scripts/: build.sh
dify/src-trigger/trigger/: agentrux_trigger.py  agentrux_trigger.yaml  sse_worker.py
dify/src-trigger/trigger/events/new_event/: new_event.py
dify/tests/: test_api_runtime.py  test_oauth_provider.py  test_trigger_ttl_recovery.py
docs/: README.md  a2a.md  mcp.md
flowise/: .npmignore  README.md  package.json
flowise/src/: AgenTruxCredential.ts  AgenTruxGetEvent.ts  AgenTruxListEvents.ts  AgenTruxPublish.ts  AgenTruxUploadDownload.ts  index.ts  utils.ts
flowise/src/__tests__/: naming.test.ts
langflow/: README.md  pyproject.toml
langflow/agentrux_langflow/: __init__.py  connection.py  list_events.py  publish.py  subscribe.py
mcp/: README.md  pyproject.toml
mcp/agentrux_mcp/: __init__.py  config.py  resources.py  server.py  tools.py
mcp/tests/: test_config.py
n8n/: .gitignore  README.md  package.json  tsconfig.json
n8n/src/: index.ts
n8n/src/__tests__/: naming.test.ts  transport.test.ts
n8n/src/credentials/: AgenTruxApi.credentials.ts
n8n/src/nodes/AgenTrux/: AgenTrux.node.ts  AgenTruxTrigger.node.ts
n8n/src/transport/: apiRequest.ts
n8n/templates/: README.md  echo.workflow.json
openclaw/: README.md  openclaw.plugin.json  package.json  tsconfig.json
openclaw/src/: activation-core.ts  credentials.ts  device-code-setup.ts  gateway.ts  http-client.ts  index.ts  oauth-errors.ts  oauth-polling.ts  runtime.ts  sanitize.ts  session.ts  topology-install.ts
openclaw/src/__tests__/: activation-core.test.ts  bootstrap.test.ts  device-code-setup.test.ts  dispatcher.test.ts  ensure-token.test.ts  gateway-drain.test.ts  legacy-bootstrap.test.ts  messaging-topics.test.ts  naming.test.ts  topology-install.test.ts  ttl-expired-recovery.test.ts
openclaw/src/__tests__/openclaw-env/: openclaw-integration.test.ts
sdk/: README.md  pyproject.toml
sdk/src/agentrux/sdk/: __init__.py  _oauth_errors.py  _oauth_polling.py  auth.py  auth_models.py  checkpoint.py  client.py  composer.py  config.py  deduplicator.py  device_code_setup.py  envelope.py  errors.py  facade.py  flow_controller.py  gap_detector.py  http_client.py  hybrid_consumer.py  mcp_setup_cli.py  models.py  pipeline.py  publish.py  pull_client.py  reconnect.py  reorder_buffer.py  sse_client.py  stats.py  topology_install.py  topology_setup_cli.py
sdk/src/agentrux_sdk/: __init__.py  _oauth_errors.py  _oauth_polling.py  auth.py  checkpoint.py  composer.py  config.py  dedupe.py  device_code_setup.py  errors.py  facade.py  gap_detector.py  http_client.py  hybrid_consumer.py  mcp_setup_cli.py  models.py  pipeline.py  publish.py  pull_client.py  sse_client.py  topology_install.py  topology_setup_cli.py
sdk/tests/: conftest.py  test_auth_models.py  test_checkpoint.py  test_client_oauth.py  test_client_topic.py  test_envelope.py  test_errors.py  test_facade.py  test_gap_detector.py  test_hybrid_consumer.py  test_pull_client.py  test_sdk_auth.py  test_sdk_composer.py  test_sdk_device_code_setup.py  test_sdk_pipeline.py  test_sdk_publish.py  test_sdk_publish_gate.py  test_sdk_read.py  test_sdk_skeleton.py  test_sdk_topology_install.py  test_sse_client.py
temporal/: README.md  pyproject.toml
temporal/temporal_agentrux/: __init__.py  activities.py  dataclasses.py  worker.py
temporal/tests/: test_dataclasses.py
(+2 files in other folders)
