[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrux-agent-tools"
version = "0.1.0b1"
description = "AI agent toolkit for AgenTrux - framework-agnostic function calling tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "agentrux>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["agentrux_agent_tools"]
