[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrux-agent-tools"
version = "0.4.0b1"
description = "AI agent toolkit for AgenTrux - framework-agnostic function calling tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
# `agentrux login` drives the OAuth Device Authorization Grant so the
# user never has to copy/paste credentials manually. See cli.py.
agentrux = "agentrux_agent_tools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentrux_agent_tools"]
