[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langflow-agentrux"
version = "0.1.0b1"
description = "Langflow components for AgenTrux - A2A authenticated pub/sub"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "langflow>=1.0",
    "agentrux-sdk>=0.1.0b1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["agentrux_langflow"]
