[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrux-sdk"
version = "0.1.0b1"
description = "Python SDK for AgenTrux — A2A authenticated pub/sub client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "sortedcontainers>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentrux"]
