[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrux-sdk"
version = "0.4.0b2"
description = "Python SDK for AgenTrux — A2A authenticated pub/sub client"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.6",
    "sortedcontainers>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentrux_sdk"]

[tool.hatch.build.targets.sdist]
# Source distribution must NOT include tests/ — that would publish
# internal test fixtures (mock servers, attack payloads, helper
# pyramids) to PyPI, violating CLAUDE.md §publish safety rule b.
include = [
    "src/agentrux_sdk",
    "README.md",
    "pyproject.toml",
    "LICENSE",
]
exclude = [
    "tests/",
    "**/__pycache__/",
    "**/*.pyc",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit-level SDK test (fast, no network)",
]
