[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temporal-agentrux"
version = "0.1.0b1"
description = "Temporal Activities for AgenTrux event operations"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "temporalio>=1.7",
    "agentrux>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
